# threads_and_parallelism

./: Cargo.toml  README.md
benches/: matrix.rs  matrix_multi_thread.rs  matrix_single_thread.rs  my_benchmark.rs  sort.rs
proptest-regressions/sort/: multi_thread.txt  single_thread.txt
src/: lib.rs  main.rs
src/matrix/: mod.rs  multi_thread.rs  single_thread.rs
src/sort/: mod.rs  multi_thread.rs  single_thread.rs
