[package]
name = "threads_and_parallelism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "my_benchmark"
path = "./benches/my_benchmark.rs"
harness = false