[package]
name = "threads_and_parallelism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.1"
proptest = "1.0.0"

[dev-dependencies]
criterion = "0.3.0"
rand = "0.8.5"

[[bench]]
name = "matrix_single_thread"
path = "./benches/matrix_single_thread.rs"
harness = false

[[bench]]
name = "matrix_multi_thread"
path = "./benches/matrix_multi_thread.rs"
harness = false
