[package]
name = "threads_and_parallelism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.1"
rand = "0.8.5"

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3.0"

[[bench]]
name = "matrix"
path = "./benches/matrix.rs"
harness = false

[[bench]]
name = "sort"
path = "./benches/sort.rs"
harness = false
